--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
       <a class="navbar-brand logo" href="/">
         <span>Node todo</span>
       </a>
-      <button type="button" class="btn btn-default pull-right navbar-btn">Sign in</button>
+      <button type="button" onclick="window.location.replace('http://localhost:3000/signin');" class="btn btn-default pull-right navbar-btn">Sign in</button>
     </div>
   </div>
 </nav>
