--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,9 +20,21 @@
         <div id='cont3'></div>
         <button id='inp3' class='btn'>New Task</button>
         </div>
-        <div class="col-md-2" style="color:red">
+        <div class="col-md-2 side-bar">
+          <form class="tag-form" action="/" method="post">
+            <input type="text" autocomplete="off" class="col-md-9 hex-box" id="tagname" name="tagname" placeholder="Enter tag name">
+            <div class="color-box">
+            <input class="color-hex" type="hidden" name="p" value=""/></div>
+            <div class="color-selector col-md-3"></div>
           <button id='inp4' class='btn btn-info btn-xs'>Add New Tag</button>
-          <div id='tag'></div>
+          </form>
+
+
+
+
+
+
+
         </div>
         <div class="col-md-2">
 
